osprey_worker/src/osprey/engine/query_language/tests/test_parse_query_to_validated_ast/test_unary_operator_query_validation_failure[UserName == 1 and not 2].txt
2 errors occurred while validating:
[1/2] error: `not` only works on `bool` types
--> main.sml:1:26
     |
   1 | Query = UserName == 1 and not 2
     |                           ^ `not` should be used on `bool` types like `not (X == Y)`
--> (1) main.sml:1:30
     |
   1 | Query = UserName == 1 and not 2
     |                               ^ has type `int`
[2/2] error: the operand must not be a literal
--> main.sml:1:26
     |
   1 | Query = UserName == 1 and not 2
     |                           ^ the right side of the `Number(value=2)` must be a non-literal (non-constant) value
--> (1) main.sml:1:30
     |
   1 | Query = UserName == 1 and not 2
     |                               ^ this is a literal value